# Matrix-Mul-Test

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  matmul_build.sh
include/: cpu_impl.h  gpu_impl.h  gpu_structs.h  gpu_utils.h  macro_utils.h  slice.h  time_utils.h  type_utils.h
src/: CMakeLists.txt  cpu_impl.cpp  gpu_impl.cu  gpu_utils.cu  matmultest.cpp  time_utils.cpp
